fix SliderRow wraparound glitch in css, and tweak SearchFilter css

--- a/src/components/SearchFilter/search-filter.css
+++ b/src/components/SearchFilter/search-filter.css
@@ -7,7 +7,7 @@
   }
 
   &__results {
-    @apply mt-16 mx-auto;
+    @apply mt-5 mx-auto;
     width: 85%;
   }
 }
