--- a/src/components/Tiles/tile-group.css
+++ b/src/components/Tiles/tile-group.css
@@ -4,7 +4,7 @@
   &__item {
     /* transform: scale(.5); */
     /* backface-visibility: hidden; */
-    transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), transform-origin 400ms cubic-bezier(0, 0, 0.2, 1);
+    transition: transform 400ms cubic-bezier(0, 0, 0.2, 1);
     transition-delay: 400ms;
     /* &:hover {
       transform: scale(1);
@@ -28,11 +28,18 @@
 
     &:hover {
       transform: scale(1.5);
+
+      /* & .toggle-to-MyList-btn,
+        .tile__title {
+          transform: scale(calc(1/1.5));
+      } */
     }
 
     &--is-left-edge {
       -webkit-backface-visibility: hidden;
       transform-origin: left;
+      transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), transform-origin 400ms cubic-bezier(0, 0, 0.2, 1);
+      transition-delay: 400ms;
 
       /* &:hover {
         transform: translateX(0) translateZ(0px);
@@ -41,6 +48,8 @@
 
     &--is-right-edge {
       transform-origin: right;
+      transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), transform-origin 400ms cubic-bezier(0, 0, 0.2, 1);
+      transition-delay: 400ms;
     }
   }
 }
