--- a/src/components/Tiles/tile.css
+++ b/src/components/Tiles/tile.css
@@ -7,11 +7,13 @@
   }
 
   &:hover {
-    & .bg-overlay {@apply opacity-100;}
-    & .toggle-to-MyList-btn {
-      /* transform: scale(0.85); */
-      opacity: 1;
+    & .bg-overlay {
+      @apply opacity-100;
     }
+    /* & .toggle-to-MyList-btn {
+      transform: scale(0.6667‬);
+      opacity: 1;
+    } */
   }
 
   @media (--sm) {
@@ -32,8 +34,7 @@
 
   &__title {
     @apply text-white text-sm text-center;
-    /* transform: scale(0.85); */
-    /* padding: 0 2%; */
+    /* font-size: 21px; */
   }
 
   &__btn-group {
