--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -8184,7 +8184,7 @@ video {
   }
 
 .search-filter__results {
-    margin-top: 4rem;
+    margin-top: 1.25rem;
     margin-left: auto;
     margin-right: auto;
     width: 85%;
@@ -8544,12 +8544,14 @@ video {
     margin-bottom: 2rem;
   }
 
-.tile:hover .bg-overlay {
+.tile:hover {
+    /* & .toggle-to-MyList-btn {
+      transform: scale(0.6667‬);
       opacity: 1;
-    }
+    } */
+  }
 
-.tile:hover .toggle-to-MyList-btn {
-      /* transform: scale(0.85); */
+.tile:hover .bg-overlay {
       opacity: 1;
     }
 
@@ -8585,8 +8587,7 @@ video {
     color: #fff;
     font-size: 0.875rem;
     text-align: center;
-    /* transform: scale(0.85); */
-    /* padding: 0 2%; */
+    /* font-size: 21px; */
   }
 
 .tile__btn-group {
@@ -8603,7 +8604,7 @@ video {
 .tile-group__item {
     /* transform: scale(.5); */
     /* backface-visibility: hidden; */
-    transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), transform-origin 400ms cubic-bezier(0, 0, 0.2, 1);
+    transition: transform 400ms cubic-bezier(0, 0, 0.2, 1);
     transition-delay: 400ms;
   }
 
@@ -8633,11 +8634,17 @@ video {
 
 .tile-group__item:hover {
       transform: scale(1.5);
+      /* & .toggle-to-MyList-btn,
+        .tile__title {
+          transform: scale(calc(1/1.5));
+      } */
     }
 
 .tile-group__item--is-left-edge {
       -webkit-backface-visibility: hidden;
       transform-origin: left;
+      transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), transform-origin 400ms cubic-bezier(0, 0, 0.2, 1);
+      transition-delay: 400ms;
       /* &:hover {
         transform: translateX(0) translateZ(0px);
       }       */
@@ -8645,6 +8652,8 @@ video {
 
 .tile-group__item--is-right-edge {
       transform-origin: right;
+      transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), transform-origin 400ms cubic-bezier(0, 0, 0.2, 1);
+      transition-delay: 400ms;
     }
 
 .toggle-to-MyList-btn {
@@ -8656,7 +8665,6 @@ video {
   border-color: #fff;
   z-index: 10;
   cursor: pointer;
-  opacity: 0;
   padding: 0 18px;
   height: 30px;
   border-radius: 18px;
